--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -89,8 +89,14 @@ section {
   padding: 20px;
   //border: black solid 1px;
   text-align: left;
-  p {
-    text-align: left;
+  h1 {
+    text-align: center;
+
+  }
+  .projects {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
   }
   
 }
