--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,6 +1,6 @@
-section {
+.projects-container {
   background-color: white;
-  height: 100vh;
+  height: fit-content;
   margin: 0 auto;
   text-align: center;
   display: flex;
@@ -72,7 +72,7 @@ section {
 }
 
 @media (max-width: 992px) {
-  section {
+  .projects-container {
     font-size: x-large;
     width: 100%;
     padding: 0;
