--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@
 .App {
   text-align: center;
   background-color: white;
+  //min-height: calc(100vh - 50px);
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar {
