--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,3 +1,8 @@
+.content {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 .projects-container {
   background-color: white;
   height: fit-content;
@@ -64,6 +69,8 @@
         margin-bottom: 5%;
         margin-left: 2.5%;
         margin-right: 2.5%;
+        box-shadow: 10px 10px gray;
+        border: solid 1px gray;
       }
     }
 
