--- a/src/components/SingleProject/SingleProject.scss
+++ b/src/components/SingleProject/SingleProject.scss
@@ -1,15 +1,93 @@
+.content {
+  height: 100vh;
+}
+//.single-project-container {
+//  min-height: calc(100vh - 50px);
+//}
+
 .single-project {
   margin: 0 auto;
   text-align: center;
   display: flex;
   flex-direction: column;
-  border: black solid 1px;
-  width: 70%;
-  height: 25vh;
-  padding: 0 0;
+  width: 80%;
+  height: fit-content;
+
   .hero-container {
+    padding: 0;
+    position: relative;
+    margin: 0;
     width: 100%;
-    height: 100%;
-    //background-image: url("https://wallpaperaccess.com/full/38580.jpg");
+
+    img {
+      filter: brightness(40%);
+      width: 100%;
+      height: auto;
+      max-width: 1000px;
+    }
+
+    .title {
+      margin: 0 auto;
+      position: absolute;
+      top: 40%;
+      //left: ;
+      text-align: center;
+      //border: white solid 1px;
+      width: 100%;
+      color: white;
+      font-weight: bold;
+      z-index: 100;
+
+    }
+
   }
+
+  .project-information-container {
+    background-color: white;
+    position: relative;
+    border: gray solid 2px;
+    text-align: left;
+    padding: 20px;
+    width: 90%;
+    margin: 0 auto;
+    border-radius: 20px;
+    top: -1rem;
+    height: fit-content;
+    max-width: 900px;
+    box-shadow: 10px 10px gray;
+    ul {
+      list-style: none;
+      padding: 0 0 0 25px;
+      margin: 0 0 50px;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .single-project {
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    //border: black solid 1px;
+    width: 100%;
+    height: fit-content;
+
+    //padding: 0 0;
+    .hero-container {
+      margin: 0 auto;
+      padding: 0;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+      .title {
+        top: 40%;
+        font-size: 8vw;
+      }
+
+    }
+  }
+
 }
