--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -69,8 +69,9 @@
         margin-bottom: 5%;
         margin-left: 2.5%;
         margin-right: 2.5%;
-        box-shadow: 10px 10px gray;
-        border: solid 1px gray;
+        box-shadow: 5px 5px gray;
+        border: solid 1px black;
+        max-width: 500px;
       }
     }
 
@@ -94,7 +95,7 @@
         .project {
           margin-left: auto;
           margin-right: auto;
-          width: 70%;
+          width: 90%;
           margin-bottom: 5%;
         }
 
