--- a/src/components/SingleProject/SingleProject.scss
+++ b/src/components/SingleProject/SingleProject.scss
@@ -20,7 +20,7 @@
     width: 100%;
 
     img {
-      filter: brightness(40%);
+      filter: brightness(20%);
       width: 100%;
       height: auto;
       max-width: 1000px;
@@ -54,7 +54,7 @@
     top: -1rem;
     height: fit-content;
     max-width: 900px;
-    box-shadow: 10px 10px gray;
+    //box-shadow: 10px 10px gray;
     ul {
       list-style: none;
       padding: 0 0 0 25px;
@@ -72,7 +72,10 @@
     //border: black solid 1px;
     width: 100%;
     height: fit-content;
-
+    .project-information-container {
+      box-shadow: none;
+      width: 100%;
+    }
     //padding: 0 0;
     .hero-container {
       margin: 0 auto;
@@ -89,5 +92,4 @@
 
     }
   }
-
 }
