--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -61,6 +61,10 @@
       }
 
     }
+    #down-button:hover {
+       transform: scale(1.1);
+     }
+
 
     @media screen and (max-width: 800px) {
       .title {
@@ -118,6 +122,9 @@
             transform: rotate(90deg);
           }
         }
+      }
+      .page-link:hover {
+        transform: scale(1.1);
       }
 
       h1 {
