--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -20,7 +20,7 @@
       margin: auto;
       width: 100%;
       img {
-        background-color: white;
+        border-radius: 50px;
         padding: 15px;
         margin: 1em;
         width: 50%;
